[package]
name = "bb8-lapin"
version = "0.2.0"
authors = ["Adrian Benavides <adri.benavides312@gmail.com>"]
repository = "https://github.com/adrianbenavides/bb8-lapin"
description = "r2d2-lapin, but for async tokio based connections"
license = "MIT"
edition = "2018"

[dependencies]
async-trait = "0.1"
bb8 = "0.7.0"
lapin = "1.2"

[dev-dependencies]
dotenv = "0.15"
lazy_static = "1.4"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-amqp = "1.0.0"
