[package]
name = "bb8-lapin"
version = "0.4.0"
authors = ["Adrian Benavides <adri.benavides312@gmail.com>"]
repository = "https://github.com/adrianbenavides/bb8-lapin"
description = "r2d2-lapin, but for async tokio based connections"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "0.1"
bb8 = "0.8"
lapin = "2.1"

[dev-dependencies]
dotenv = "0.15"
lazy_static = "1.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
tokio-executor-trait = "2.1"
tokio-reactor-trait = "1.1"
